org-template/netpol-mart.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mart-authz
spec:
  podSelector:
    matchLabels:
      app: apigee-mart
  policyTypes:
    - Ingress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 7091
  egress:
    - to: []
      ports:
      - protocol: TCP
        port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mart-connect
spec:
  podSelector:
    matchLabels:
      app: apigee-mart
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: apigee
    - podSelector:
        matchLabels:
          app: apigee-connect-agent
    ports:
    - protocol: TCP
      port: 8843
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mart-metrics
spec:
  podSelector:
    matchLabels:
      app: apigee-mart
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: apigee
    - podSelector:
        matchLabels:
          app: apigee-metrics
    ports:
    - protocol: TCP
      port: 8843
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mart-cassandra
spec:
  podSelector:
    matchLabels:
      app: apigee-mart
  policyTypes:
    - Egress
  egress:
    - to: 
      - namespaceSelector:
          matchLabels:
            app: apigee
      - podSelector:
          matchLabels:
            app: apigee-cassandra    
      ports:
      - protocol: TCP
        port: 9042
